# Rust-React-Tauri-MovieProject

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
frontend/: package-lock.json
frontend_mobile/: .gitignore  package-lock.json  package.json
frontend_mobile/src/: App.tsx  api.ts
migrations/: 0001_init.up.sql
movie_app/: package-lock.json  package.json
movie_app/src-tauri/: Cargo.toml  tauri.conf.json
movie_app/src-tauri/src/: main.rs
src/: main.rs
src-tauri/: package-lock.json
src-tauri/src-tauri/: tauri.conf.json
src-tauri/src-tauri/src/: api.rs  db.rs  main.rs  scanner.rs
src/db/: mod.rs
