[package]
name = "media_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.3"
regex = "1.5"
thiserror = "1.0"
tauri = { version = "2.0", features = ["sqlite"] }

[build-dependencies]
tauri-build = { version = "2.0" }